kubernetes/apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        ports:
        - containerPort: 8096

        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config

      volumes:
      - name: media
        hostPath:
          path: /home/balazs/media
      - name: config
        hostPath:
          path: /home/balazs/appdata/jellyfin
