kubernetes/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: jellyfin
  namespace: media

spec:
  selector:
    app: jellyfin
  port:
    - name: http
      port: 8096
      targetPort: 8096
  type: ClusterIP
