kubernetes/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jellyfin
  namespace: media

spec:
  ingressClassName: traefik

  rules:
  - host: jellyfin.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
           name: jellyfin

           port:
             number: 8096
